--- a/doc/DokumenSkripsi/skripsi.tex
+++ b/doc/DokumenSkripsi/skripsi.tex
@@ -75,6 +75,7 @@
 \usepackage{ amssymb }
 \usepackage{enumitem}
 \usepackage{makecell}
+\setcounter{secnumdepth}{3}
 \lstset{
 	numbers=none,
 	showspaces=false,
