--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -47,6 +47,8 @@
 \usepackage{todo}
 \usepackage{verbatim} 		%multiline comment
 \usepackage{pgfplots}
+
+\usepackage{makecell}
 %\overfullrule=3mm % memperlihatkan overfull 
 %=============================================================================
 
@@ -286,5 +288,6 @@
 % Tambahkan perintah yang anda buat sendiri di sini 
 %=============================================================================
 \renewcommand{\vtemplateauthor}{lionov}
+\setcounter{secnumdepth}{3}
 \pgfplotsset{compat=newest}
 %=============================================================================
