--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -41,13 +41,13 @@
 %=============================================================================
 % Tambahkan package2 lain yang anda butuhkan di sini
 %=============================================================================
+
 \usepackage{booktabs} 
 \usepackage{longtable}
 \usepackage{amssymb}
 \usepackage{todo}
 \usepackage{verbatim} 		%multiline comment
 \usepackage{pgfplots}
-
 \usepackage{makecell}
 %\overfullrule=3mm % memperlihatkan overfull 
 %=============================================================================
@@ -198,8 +198,8 @@
 % Petunjuk: hilangkan tanda << & >>, dan isi sesuai dengan data anda
 %=============================================================================
 \namanpm{Stephen Hadi}{2017730016}
-\tanggal{<<tanggal>>}{<<bulan>>}{2020}         %isi bulan dengan angka
-\pembimbing{Pascal Alfadian Nugroho}{}    
+\tanggal{25}{2}{2020}         %isi bulan dengan angka
+\pembimbing{\PAN}{}    
 \penguji{<<penguji 1>>}{<<penguji 2>>} 
 %=============================================================================
 
