--- a/doc/DokumenSkripsi/dosen.tex
+++ b/doc/DokumenSkripsi/dosen.tex
@@ -69,7 +69,7 @@
 \newcommand{\ELH}{Elisati\,Hulu,\,M.T.}
 \newcommand{\CHW}{Chandra\,Wijaya,\,M.T.}
 \newcommand{\GDK}{Gede\,Karya,\,M.T.,\,CISA}
-% * \newcommand{\PAN}{Pascal\,Alfadian,\,M.Comp.} 
+\newcommand{\PAN}{Pascal\,Alfadian,\,M.Comp.} 
 % * \newcommand{\HUH}{Husnul\,Hakim,\,M.T.} 
 % * \newcommand{\VAN}{Vania\,Natali,\,M.T.} 
 % * \newcommand{\NAT}{Natalia,\,M.Si.} 
